--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="./styles/styles.scss"
     />
   </head>
@@ -302,7 +306,6 @@
                   class="gallery__image"
                 />
               </div>
-
               <div class="gallery__item gallery__item--2">
                 <img
                   src="./images/gallery__image-2.png"
@@ -310,7 +313,6 @@
                   class="gallery__image"
                 />
               </div>
-
               <div class="gallery__item gallery__item--3">
                 <img
                   src="./images/gallery__image-3.png"
@@ -318,7 +320,6 @@
                   class="gallery__image"
                 />
               </div>
-
               <div class="gallery__item gallery__item--4">
                 <img
                   src="./images/gallery__image-4.png"
@@ -326,13 +327,49 @@
                   class="gallery__image"
                 />
               </div>
+            </div>
 
-              <div class="gallery__item gallery__item--swiper">
-                <img
-                  src="./images/gallery__image-5.png"
-                  alt="Картина 'Гуси' написана Борисом Сердюком"
-                  class="gallery__image"
-                />
+            <div class="gallery__swiper">
+              <div class="swiper-wrapper">
+                <div class="gallery__item">
+                  <img
+                    src="./images/gallery__image.png"
+                    alt="Картина 'Наречена' написана Кричевським Федором Григоровичем"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="gallery__item">
+                  <img
+                    src="./images/gallery__image-5.png"
+                    alt="Картина 'Гуси' написана Борисом Сердюком"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="gallery__item">
+                  <img
+                    src="./images/gallery__image-2.png"
+                    alt="Картина 'Українське село взимку' написана Левченком"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="gallery__item">
+                  <img
+                    src="./images/gallery__image-3.png"
+                    alt="Картина 'Сонячний день' написана Киріаком Костянтиновичем Костанді"
+                    class="gallery__image"
+                  />
+                </div>
+
+                <div class="gallery__item">
+                  <img
+                    src="./images/gallery__image-4.png"
+                    alt="Картина 'На морі' написана Миколою Петровичем Глущенком"
+                    class="gallery__image"
+                  />
+                </div>
               </div>
             </div>
           </div>
@@ -343,6 +380,7 @@
 
     <footer></footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
