completed swiper, started email block

--- a/src/index.html
+++ b/src/index.html
@@ -328,54 +328,90 @@
                 />
               </div>
             </div>
+          </div>
+        </div>
+        <div class="gallery__swiper swiper">
+          <div class="swiper-wrapper">
+            <div class="gallery__item swiper-slide">
+              <img
+                src="./images/gallery__image.png"
+                alt="Картина 'Наречена' написана Кричевським Федором Григоровичем"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
 
-            <div class="gallery__swiper">
-              <div class="swiper-wrapper">
-                <div class="gallery__item">
-                  <img
-                    src="./images/gallery__image.png"
-                    alt="Картина 'Наречена' написана Кричевським Федором Григоровичем"
-                    class="gallery__image"
-                  />
-                </div>
+            <div class="gallery__item swiper-slide">
+              <img
+                src="./images/gallery__image-5.png"
+                alt="Картина 'Гуси' написана Борисом Сердюком"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
 
-                <div class="gallery__item">
-                  <img
-                    src="./images/gallery__image-5.png"
-                    alt="Картина 'Гуси' написана Борисом Сердюком"
-                    class="gallery__image"
-                  />
-                </div>
+            <div class="gallery__item swiper-slide">
+              <img
+                src="./images/gallery__image-2.png"
+                alt="Картина 'Українське село взимку' написана Левченком"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
 
-                <div class="gallery__item">
-                  <img
-                    src="./images/gallery__image-2.png"
-                    alt="Картина 'Українське село взимку' написана Левченком"
-                    class="gallery__image"
-                  />
-                </div>
+            <div class="gallery__item swiper-slide">
+              <img
+                src="./images/gallery__image-3.png"
+                alt="Картина 'Сонячний день' написана Киріаком Костянтиновичем Костанді"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
 
-                <div class="gallery__item">
-                  <img
-                    src="./images/gallery__image-3.png"
-                    alt="Картина 'Сонячний день' написана Киріаком Костянтиновичем Костанді"
-                    class="gallery__image"
-                  />
-                </div>
+            <div class="gallery__item swiper-slide">
+              <img
+                src="./images/gallery__image-4.png"
+                alt="Картина 'На морі' написана Миколою Петровичем Глущенком"
+                class="gallery__image gallery__image--swiper"
+              />
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </section>
 
-                <div class="gallery__item">
-                  <img
-                    src="./images/gallery__image-4.png"
-                    alt="Картина 'На морі' написана Миколою Петровичем Глущенком"
-                    class="gallery__image"
-                  />
-                </div>
+      <section class="email page__email">
+        <div class="container">
+          <div class="email__content">
+            <div class="email__block">
+              <div class="email__text-wrap">
+                <h2 class="title">Підписка</h2>
+
+                <p class="email__subtitle">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </p>
               </div>
+              <form
+                onsubmit="this.reset(); return false;"
+                class="email__form"
+              >
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  class="email__input"
+                />
+                <button
+                  type="submit"
+                  class="arrow-link arrow-link--email"
+                >
+                  <img
+                    src="./images/icons/link-arrow-dark.svg"
+                    alt="стрілка"
+                    class="arrow-link__cursor"
+                  />
+                </button>
+              </form>
             </div>
           </div>
         </div>
       </section>
-      <section></section>
     </main>
 
     <footer></footer>
