landing page museum

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                 alt="burger-icon"
               />
             </a>
-            <a href="#">
+            <a class="header__container-logo" href="#">
               <img
                 class="header__logo"
                 src="./images/icons/NA MU logo.svg"
