completed email section

--- a/src/index.html
+++ b/src/index.html
@@ -381,7 +381,7 @@
           <div class="email__content">
             <div class="email__block">
               <div class="email__text-wrap">
-                <h2 class="title">Підписка</h2>
+                <h2 class="title title--white">Підписка</h2>
 
                 <p class="email__subtitle">
                   Бути в курсі всіх актуальних подій та останніх новин.
