add base footer markup

--- a/src/index.html
+++ b/src/index.html
@@ -414,7 +414,37 @@
       </section>
     </main>
 
-    <footer></footer>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__block-top">
+            <div class="footer__logo-social">
+              <a href="#" class="footer__logo"></a>
+
+              <div class="footer__social">
+                <a href="#" class="footer__social-link"></a>
+                <a href="#" class="footer__social-link"></a>
+              </div>
+            </div>
+
+            <div class="footer__info">
+              <div class="info"></div>
+
+              <div class="footer__contacts"></div>
+            </div>
+
+            <div class="footer__separator"></div>
+
+            <nav class="nav"></nav>
+          </div>
+
+          <div class="footer__copyright">
+            <p class="footer__copyright-text"></p>
+            <p class="footer__copyright-text"></p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
