--- a/src/index.html
+++ b/src/index.html
@@ -419,11 +419,20 @@
         <div class="footer__content">
           <div class="footer__block-top">
             <div class="footer__logo-social">
-              <a href="#" class="footer__logo"></a>
+              <a
+                href="#"
+                class="footer__logo"
+              ></a>
 
               <div class="footer__social">
-                <a href="#" class="footer__social-link"></a>
-                <a href="#" class="footer__social-link"></a>
+                <a
+                  href="#"
+                  class="footer__social-link"
+                ></a>
+                <a
+                  href="#"
+                  class="footer__social-link"
+                ></a>
               </div>
             </div>
 
@@ -435,7 +444,46 @@
 
             <div class="footer__separator"></div>
 
-            <nav class="nav"></nav>
+            <nav class="nav nav--footer">
+              <ul class="nav__list">
+                <div class="nav__column nav__column--footer">
+                  <li class="nav__item">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--footer-setting"
+                    >
+                      <span class="nav__link-text">Галерея</span>
+                    </a>
+                  </li>
+                  <li class="nav__item nav__item--height">
+                    <a
+                      href="#events-section"
+                      class="nav__link nav__link--footer-setting"
+                    >
+                      <span class="nav__link-text">Виставки та події</span>
+                    </a>
+                  </li>
+                </div>
+                <div class="nav__column nav__column--footer">
+                  <li class="nav__item">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--footer-setting"
+                    >
+                      <span class="nav__link-text">Про Нас</span>
+                    </a>
+                  </li>
+                  <li class="nav__item nav__item--height">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--footer-setting"
+                    >
+                      <span class="nav__link-text">Контакти</span>
+                    </a>
+                  </li>
+                </div>
+              </ul>
+            </nav>
           </div>
 
           <div class="footer__copyright">
