making footer adaptive

--- a/src/index.html
+++ b/src/index.html
@@ -414,38 +414,143 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer page__footer">
       <div class="container">
         <div class="footer__content">
           <div class="footer__block-top">
-            <div class="footer__logo-social">
-              <a
-                href="#"
-                class="footer__logo"
-              ></a>
-
-              <div class="footer__social">
+            <div class="footer__wrapper-information">
+              <div class="footer__logo-social">
                 <a
                   href="#"
-                  class="footer__social-link"
-                ></a>
-                <a
-                  href="#"
-                  class="footer__social-link"
-                ></a>
+                  class="logo-link logo-link--on-desktop"
+                >
+                  <img
+                    src="./images/logo.svg"
+                    alt="логотип сайту"
+                    class="logo-link__image"
+                  />
+                </a>
+                <div class="footer__social">
+                  <a
+                    href="#"
+                    class="footer__social-link"
+                  >
+                    <img
+                      src="./images/icons/facebook-logo.svg"
+                      alt="Посилання на facebook"
+                      class="footer__social-image"
+                    />
+                  </a>
+                  <a
+                    href="#"
+                    class="footer__social-link"
+                  >
+                    <img
+                      src="./images/icons/instagram-logo.svg"
+                      alt="Посилання на instagram"
+                      class="footer__social-image"
+                    />
+                  </a>
+                </div>
               </div>
-            </div>
-
-            <div class="footer__info">
-              <div class="info"></div>
-
-              <div class="footer__contacts"></div>
+              <div class="footer__info">
+                <div class="info info--footer">
+                  <h6 class="info__title info__title--footer">Графік роботи</h6>
+                  <div class="info__bottom-wrap info__bottom-wrap--footer">
+                    <ul class="info__chart">
+                      <li class="info__chart-item info__chart-item--footer">
+                        <span class="info__chart-text">
+                          <strong>12:00 — 20:00</strong>
+                          середа
+                        </span>
+                      </li>
+                      <li class="info__chart-item info__chart-item--footer">
+                        <span class="info__chart-text">
+                          <strong>12:00 — 20:00</strong>
+                          четвер
+                        </span>
+                      </li>
+                      <li class="info__chart-item info__chart-item--footer">
+                        <span class="info__chart-text">
+                          <strong>12:00 — 20:00</strong>
+                          п’ятниця
+                        </span>
+                      </li>
+                      <li class="info__chart-item info__chart-item--footer">
+                        <span class="info__chart-text">
+                          <strong>11:00 — 19:00</strong>
+                          субота
+                        </span>
+                      </li>
+                      <li class="info__chart-item info__chart-item--footer">
+                        <span class="info__chart-text">
+                          <strong>11:00 — 19:00</strong>
+                          неділя
+                        </span>
+                      </li>
+                    </ul>
+                    <div class="info__weekends info__weekends--footer">
+                      <span
+                        class="info__weekends-text info__weekends-text--tablet-disabled"
+                      >
+                        <strong>Вихідні:</strong>
+                        понеділок, вівторок
+                        <br />
+                        Каса припиняє роботу за 1 годину до закриття музею
+                      </span>
+                      <span
+                        class="info__weekends-text info__weekends-text--on-tablet"
+                      >
+                        Вихідні: понеділок, вівторок Каса припиняє роботу за 1
+                        годину до закриття музею
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="footer__contacts">
+                  <h6 class="footer__contacts-title">Контакти:</h6>
+                  <ul class="footer__information">
+                    <li class="footer__information-item">
+                      <a
+                        href="#"
+                        class="footer__information-link"
+                      >
+                        <span>вул. М. Грушевського, 6; Київ, 01001</span>
+                      </a>
+                    </li>
+                    <li class="footer__information-item">
+                      <a
+                        href="#"
+                        class="footer__information-link"
+                      >
+                        <span>тел. +38 (044) 278-13-57</span>
+                      </a>
+                    </li>
+                    <li class="footer__information-item">
+                      <a
+                        href="#"
+                        class="footer__information-link"
+                      >
+                        <span>факс +38 (044) 278-74-54</span>
+                      </a>
+                    </li>
+                    <li class="footer__information-item">
+                      <a
+                        href="#"
+                        class="footer__information-link"
+                      >
+                        <span>e-mail: info@namu.kiev.ua</span>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
             </div>
 
             <div class="footer__separator"></div>
 
             <nav class="nav nav--footer">
-              <ul class="nav__list">
+              <ul class="nav__list nav nav__list--footer">
                 <div class="nav__column nav__column--footer">
                   <li class="nav__item">
                     <a
@@ -487,8 +592,10 @@
           </div>
 
           <div class="footer__copyright">
-            <p class="footer__copyright-text"></p>
-            <p class="footer__copyright-text"></p>
+            <p class="footer__copyright-text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+            <p class="footer__copyright-text">Designed by Zhyriada Marina</p>
           </div>
         </div>
       </div>
