Create component: header

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,195 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Museum</title>
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&family=Montserrat:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <a
+            class="header__logo menu-toggle"
+            href="#menu"
+          >
+            <img
+              class="header__logo-img"
+              src="./images/icons/menu-open.svg"
+              alt="menu open"
+            />
+          </a>
+        </div>
+      </div>
+    </header>
+    <aside
+      id="menu"
+      class="menu"
+    >
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="menu__wrapper-content">
+            <div class="menu__content">
+              <a
+                class="menu__close menu-toggle"
+                href="#"
+              >
+                <img
+                  class="menu__close-img"
+                  src="./images/icons/menu-close.svg"
+                  alt="menu close"
+                />
+              </a>
+              <nav class="menu__nav">
+                <ul class="menu__list">
+                  <li class="menu__item">
+                    <a
+                      class="menu__link link"
+                      href="#"
+                    >
+                      Галерея
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a
+                      class="menu__link link"
+                      href="#"
+                    >
+                      Про Нас
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a
+                      class="menu__link link"
+                      href="#"
+                    >
+                      Виставки та
+                      <br />
+                      події
+                    </a>
+                  </li>
+                  <li class="menu__item">
+                    <a
+                      class="menu__link link"
+                      href="#"
+                    >
+                      Контакти
+                    </a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <hr />
+            <div class="menu__schedule">
+              <h5 class="menu__schedule-title">Графік роботи</h5>
+              <div class="menu__schedule-content">
+                <div class="menu__schedule-days">
+                  <p class="menu__schedule-item">
+                    <span>12:00 — 20:00</span>
+                    середа
+                  </p>
+                  <p class="menu__schedule-item">
+                    <span>12:00 — 20:00</span>
+                    четвер
+                  </p>
+                  <p class="menu__schedule-item">
+                    <span>12:00 — 20:00</span>
+                    п’ятниця
+                  </p>
+                  <p class="menu__schedule-item">
+                    <span>11:00 — 19:00</span>
+                    субота
+                  </p>
+                  <p class="menu__schedule-item">
+                    <span>11:00 — 19:00</span>
+                    неділя
+                  </p>
+                </div>
+
+                <div class="menu__schedule-info">
+                  <p class="menu__schedule-text">
+                    <span>Вихідні</span>
+                    : понеділок, вівторок
+                  </p>
+                  <p class="menu__schedule-text">
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <a
+        href="#"
+        class="inactive menu-toggle"
+      ></a>
+    </aside>
+    <main>
+      <section class="hero">
+        <div class="hero__bg">
+          <div class="hero__logo">
+            <a
+              class="hero__logo-link"
+              href="#"
+            >
+              <img
+                src="./images/logo/museum-logo.svg"
+                alt="logo"
+              />
+            </a>
+          </div>
+        </div>
+
+        <div class="hero__content">
+          <div class="container">
+            <h1 class="hero__title">
+              Художній
+              <br />
+              Музей
+            </h1>
+
+            <a
+              class="button"
+              href="#"
+            >
+              Квитки
+              <div class="icon">
+                <svg
+                  width="8"
+                  height="12"
+                  viewBox="0 0 8 12"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M0.589996 10.59L5.17 6L0.589996 1.41L2 0L8 6L2 12L0.589996 10.59Z"
+                    fill="#D7DDE3"
+                  />
+                </svg>
+              </div>
+            </a>
+          </div>
+        </div>
+      </section>
+    </main>
+    <script
+      type="module"
+      src="scripts/main.js"
+    ></script>
   </body>
 </html>
