--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
                 <div class="nav__column">
                   <li class="nav__item">
                     <a
-                      href="#"
+                      href="#gallery"
                       class="nav__link nav__link--menu-setting"
                     >
                       <span class="nav__link-text">Галерея</span>
@@ -135,7 +135,7 @@
                   </li>
                   <li class="nav__item nav__item--height">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="nav__link nav__link--menu-setting"
                     >
                       <span class="nav__link-text">Контакти</span>
@@ -293,7 +293,10 @@
           </div>
         </div>
       </section>
-      <section class="gallery page__gallery">
+      <section
+        class="gallery page__gallery"
+        id="gallery"
+      >
         <div class="container">
           <div class="gallery__content">
             <h2 class="title gallery__title">Галерея</h2>
@@ -414,7 +417,10 @@
       </section>
     </main>
 
-    <footer class="footer page__footer">
+    <footer
+      class="footer page__footer"
+      id="contacts"
+    >
       <div class="container">
         <div class="footer__content">
           <div class="footer__block-top">
@@ -432,24 +438,106 @@
                 </a>
                 <div class="footer__social">
                   <a
-                    href="#"
+                    href="https://www.facebook.com/namu.museum/"
                     class="footer__social-link"
+                    target="_blank"
+                    rel="noopener noreferrer"
                   >
-                    <img
-                      src="./images/icons/facebook-logo.svg"
-                      alt="Посилання на facebook"
+                    <svg
+                      width="23.962402"
+                      height="24.000000"
+                      viewBox="0 0 23.9624 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
                       class="footer__social-image"
-                    />
+                    >
+                      <defs>
+                        <clippath id="clip12716_49">
+                          <rect
+                            rx="0.000000"
+                            width="22.962555"
+                            height="23.000000"
+                            transform="translate(0.500000 0.500000)"
+                            fill="white"
+                            fill-opacity="0"
+                          />
+                        </clippath>
+                      </defs>
+                      <rect
+                        rx="0.000000"
+                        width="22.962555"
+                        height="23.000000"
+                        transform="translate(0.500000 0.500000)"
+                        fill="#FFFFFF"
+                        fill-opacity="0"
+                      />
+                      <g clip-path="url(#clip12716_49)">
+                        <path
+                          class="footer__social--hover"
+                          d="M8.8 4.64C8.8 5.25 8.8 7.95 8.8 7.95L6.39 7.95L6.39 11.99L8.8 11.99L8.8 24L13.77 24L13.77 11.99L17.1 11.99C17.1 11.99 17.41 10.05 17.56 7.93C17.13 7.93 13.79 7.93 13.79 7.93C13.79 7.93 13.79 5.58 13.79 5.17C13.79 4.76 14.33 4.2 14.86 4.2C15.4 4.2 16.52 4.2 17.57 4.2C17.57 3.65 17.57 1.75 17.57 0C16.17 0 14.59 0 13.89 0C8.68 0 8.8 4.04 8.8 4.64Z"
+                          fill="#000000"
+                          fill-opacity="1.000000"
+                          fill-rule="nonzero"
+                        />
+                      </g>
+                    </svg>
                   </a>
                   <a
-                    href="#"
+                    href="https://www.instagram.com/namu.museum/"
                     class="footer__social-link"
+                    target="_blank"
+                    rel="noopener noreferrer"
                   >
-                    <img
-                      src="./images/icons/instagram-logo.svg"
-                      alt="Посилання на instagram"
-                      class="footer__social-image"
-                    />
+                    <svg
+                      width="24.000000"
+                      height="24.000000"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <defs>
+                        <clippath id="clip12716_52">
+                          <rect
+                            rx="0.000000"
+                            width="23.000000"
+                            height="23.000000"
+                            transform="translate(0.500000 0.500000)"
+                            fill="white"
+                            fill-opacity="0"
+                          />
+                        </clippath>
+                      </defs>
+                      <rect
+                        rx="0.000000"
+                        width="23.000000"
+                        height="23.000000"
+                        transform="translate(0.500000 0.500000)"
+                        fill="#FFFFFF"
+                        fill-opacity="0"
+                      />
+                      <g clip-path="url(#clip12716_52)">
+                        <path
+                          class="footer__social--hover"
+                          d="M17.5 0L6.49 0C2.91 0 0 2.91 0 6.49L0 17.5C0 21.08 2.91 24 6.49 24L17.5 24C21.08 24 24 21.08 24 17.5L24 6.49C24 2.91 21.08 0 17.5 0L17.5 0ZM12 18.56C8.38 18.56 5.43 15.61 5.43 12C5.43 8.38 8.38 5.43 12 5.43C15.61 5.43 18.56 8.38 18.56 12C18.56 15.61 15.61 18.56 12 18.56ZM18.71 6.98C17.64 6.98 16.78 6.11 16.78 5.04C16.78 3.97 17.64 3.1 18.71 3.1C19.78 3.1 20.65 3.97 20.65 5.04C20.65 6.11 19.78 6.98 18.71 6.98Z"
+                          fill="#000000"
+                          fill-opacity="1.000000"
+                          fill-rule="nonzero"
+                        />
+                        <path
+                          class="footer__social--hover"
+                          d="M12 6.84C9.15 6.84 6.84 9.15 6.84 12C6.84 14.84 9.15 17.15 12 17.15C14.84 17.15 17.15 14.84 17.15 12C17.15 9.15 14.84 6.84 12 6.84Z"
+                          fill="#000000"
+                          fill-opacity="1.000000"
+                          fill-rule="nonzero"
+                        />
+                        <path
+                          d="M18.71 4.51C18.42 4.51 18.18 4.75 18.18 5.04C18.18 5.33 18.42 5.57 18.71 5.57C19.01 5.57 19.25 5.33 19.25 5.04C19.25 4.75 19.01 4.51 18.71 4.51Z"
+                          fill="#000000"
+                          fill-opacity="1.000000"
+                          fill-rule="nonzero"
+                        />
+                      </g>
+                    </svg>
                   </a>
                 </div>
               </div>
@@ -512,38 +600,51 @@
                   <ul class="footer__information">
                     <li class="footer__information-item">
                       <a
-                        href="#"
+                        href="https://maps.app.goo.gl/f3b8a3vmbCLvuj4V6"
                         class="footer__information-link"
+                        target="_blank"
+                        rel="noopener noreferrer"
                       >
                         <span>вул. М. Грушевського, 6; Київ, 01001</span>
                       </a>
                     </li>
                     <li class="footer__information-item">
                       <a
-                        href="#"
+                        href="tel:+380442781357"
                         class="footer__information-link"
+                        target="_blank"
+                        rel="noopener noreferrer"
                       >
                         <span>тел. +38 (044) 278-13-57</span>
                       </a>
                     </li>
                     <li class="footer__information-item">
                       <a
-                        href="#"
+                        href="tel:+380442787454"
                         class="footer__information-link"
+                        target="_blank"
+                        rel="noopener noreferrer"
                       >
                         <span>факс +38 (044) 278-74-54</span>
                       </a>
                     </li>
                     <li class="footer__information-item">
                       <a
-                        href="#"
+                        href="mailto:info@namu.kiev.ua"
                         class="footer__information-link"
+                        target="_blank"
+                        rel="noopener noreferrer"
                       >
                         <span>e-mail: info@namu.kiev.ua</span>
                       </a>
                     </li>
                   </ul>
                 </div>
+
+                <a
+                  href="#"
+                  class="footer__link-to-top"
+                ></a>
               </div>
             </div>
 
@@ -554,10 +655,12 @@
                 <div class="nav__column nav__column--footer">
                   <li class="nav__item">
                     <a
-                      href="#"
+                      href="#gallery"
                       class="nav__link nav__link--footer-setting"
                     >
-                      <span class="nav__link-text">Галерея</span>
+                      <span class="nav__link-text nav__link-text--footer">
+                        Галерея
+                      </span>
                     </a>
                   </li>
                   <li class="nav__item nav__item--height">
@@ -565,7 +668,9 @@
                       href="#events-section"
                       class="nav__link nav__link--footer-setting"
                     >
-                      <span class="nav__link-text">Виставки та події</span>
+                      <span class="nav__link-text nav__link-text--footer">
+                        Виставки та події
+                      </span>
                     </a>
                   </li>
                 </div>
@@ -575,15 +680,19 @@
                       href="#"
                       class="nav__link nav__link--footer-setting"
                     >
-                      <span class="nav__link-text">Про Нас</span>
+                      <span class="nav__link-text nav__link-text--footer">
+                        Про Нас
+                      </span>
                     </a>
                   </li>
                   <li class="nav__item nav__item--height">
                     <a
-                      href="#"
+                      href="#contacts"
                       class="nav__link nav__link--footer-setting"
                     >
-                      <span class="nav__link-text">Контакти</span>
+                      <span class="nav__link-text nav__link-text--footer">
+                        Контакти
+                      </span>
                     </a>
                   </li>
                 </div>
