--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                   <li class="menu__item">
                     <a
                       class="menu__link link"
-                      href="#"
+                      href="#events"
                     >
                       Виставки та
                       <br />
@@ -188,6 +188,88 @@
                 </svg>
               </div>
             </a>
+          </div>
+        </div>
+      </section>
+      <section
+        id="events"
+        class="events"
+      >
+        <div class="container">
+          <h2 class="events__title">Актуальні події</h2>
+          <div class="events__content">
+            <div class="events__img-wrapper">
+              <a
+                href="./images/events/event-1.jpg"
+                data-fancybox="events-gallery"
+                data-caption="Йду і повертаюсь"
+              >
+                <picture>
+                  <source
+                    srcset="./images/events/event-1.avif"
+                    type="image/avif"
+                  />
+                  <source
+                    srcset="./images/events/event-1.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    class="events__img"
+                    src="./images/events/event-1.jpg"
+                    alt="event-1"
+                  />
+                </picture>
+              </a>
+            </div>
+            <div class="events__info">
+              <div class="events__info-date">
+                <p class="events__info-text">Виставка</p>
+                <p class="events__info-subtitle">26.08-29.11.2019</p>
+              </div>
+              <h3 class="events__info-title">Йду і повертаюсь</h3>
+              <p class="events__info-description">
+                Національний Художній Музей України презентує унікальну частину
+                колекції Градобанку - українське мистецтво другої половини
+                1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="events__content">
+            <div class="events__img-wrapper">
+              <a
+                href="./images/events/event-2.jpg"
+                data-fancybox="events-gallery"
+                data-caption="І спогади і мрії"
+              >
+                <picture>
+                  <source
+                    srcset="./images/events/event-2.avif"
+                    type="image/avif"
+                  />
+                  <source
+                    srcset="./images/events/event-2.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    class="events__img"
+                    src="./images/events/event-2.jpg"
+                    alt="event-2"
+                  />
+                </picture>
+              </a>
+            </div>
+            <div class="events__info">
+              <div class="events__info-date">
+                <p class="events__info-text">Виставка</p>
+                <p class="events__info-subtitle">26.08-29.11.2019</p>
+              </div>
+              <h3 class="events__info-title">І спогади і мрії</h3>
+              <p class="events__info-description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
           </div>
         </div>
       </section>
