--- a/src/index.html
+++ b/src/index.html
@@ -217,6 +217,7 @@
                     class="events__img"
                     src="./images/events/event-1.jpg"
                     alt="event-1"
+                    loading="lazy"
                   />
                 </picture>
               </a>
@@ -254,6 +255,7 @@
                     class="events__img"
                     src="./images/events/event-2.jpg"
                     alt="event-2"
+                    loading="lazy"
                   />
                 </picture>
               </a>
@@ -270,6 +272,15 @@
                 відкриває ретроспективну ювілейну виставку «І спогади і мрії».
               </p>
             </div>
+          </div>
+        </div>
+        <div class="lecture">
+          <div class="lecture__info">
+            <div class="lecture__info-date">
+              <p class="lecture__info-text">Лекція</p>
+              <p class="lecture__info-subtitle">26.08-29.11.2019</p>
+            </div>
+            <h3 class="lecture__info-title">Від класицизму до романтизму</h3>
           </div>
         </div>
       </section>
