--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                   <li class="menu__item">
                     <a
                       class="menu__link link"
-                      href="#"
+                      href="#gallery"
                     >
                       Галерея
                     </a>
@@ -281,6 +281,90 @@
               <p class="lecture__info-subtitle">26.08-29.11.2019</p>
             </div>
             <h3 class="lecture__info-title">Від класицизму до романтизму</h3>
+          </div>
+        </div>
+      </section>
+      <section
+        id="gallery"
+        class="gallery"
+      >
+        <div class="container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div
+            class="swiper-container"
+            id="swiper-gallery"
+          >
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <picture>
+                  <source
+                    srcset="./images/gallery/slide-1.avif"
+                    type="image/avif"
+                  />
+                  <source
+                    srcset="./images/gallery/slide-1.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./images/gallery/slide-1.jpg"
+                    alt="slide-1"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+              <div class="swiper-slide">
+                <picture>
+                  <source
+                    srcset="./images/gallery/slide-2.avif"
+                    type="image/avif"
+                  />
+                  <source
+                    srcset="./images/gallery/slide-2.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./images/gallery/slide-2.jpg"
+                    alt="slide-2"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+              <div class="swiper-slide">
+                <picture>
+                  <source
+                    srcset="./images/gallery/slide-3.avif"
+                    type="image/avif"
+                  />
+                  <source
+                    srcset="./images/gallery/slide-3.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./images/gallery/slide-3.jpg"
+                    alt="slide-3"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+              <div class="swiper-slide">
+                <picture>
+                  <source
+                    srcset="./images/gallery/slide-4.avif"
+                    type="image/avif"
+                  />
+                  <source
+                    srcset="./images/gallery/slide-4.webp"
+                    type="image/webp"
+                  />
+                  <img
+                    src="./images/gallery/slide-4.jpg"
+                    alt="slide-4"
+                    loading="lazy"
+                  />
+                </picture>
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
           </div>
         </div>
       </section>
