Create component: contact-us

--- a/src/index.html
+++ b/src/index.html
@@ -90,7 +90,7 @@
                   <li class="menu__item">
                     <a
                       class="menu__link link"
-                      href="#"
+                      href="#contacts"
                     >
                       Контакти
                     </a>
@@ -365,6 +365,38 @@
               </div>
             </div>
             <div class="swiper-pagination"></div>
+          </div>
+        </div>
+      </section>
+
+      <section
+        id="contacts"
+        class="contacts"
+      >
+        <div class="container">
+          <div class="contacts__content">
+            <h2 class="contacts__title">Підписка</h2>
+            <p class="contacts__subtitle">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+            <form
+              action="#"
+              class="contacts__form"
+            >
+              <label for="email">
+                <input
+                  class="contacts__form-input"
+                  id="email"
+                  type="email"
+                  placeholder="E-mail"
+                  required
+                />
+              </label>
+              <button
+                class="contacts__form-btn"
+                type="submit"
+              ></button>
+            </form>
           </div>
         </div>
       </section>
